<resources>
    <string name="title">Components</string>

    <string name="connection">Connection:</string>
    <string name="connection_none">None</string>
    <string name="status">Status:</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
    <string name="delay">Delay:</string>
    <string name="common">Common</string>
    <string name="last">Last</string>
    <string name="history">History</string>

</resources>
