<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_medium">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/axis_y"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/label_connection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_default"
        android:text="@string/connection"
        app:layout_constraintEnd_toStartOf="@id/axis_y"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/output_connection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/axis_y"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/connection_none" />

    <TextView
        android:id="@+id/label_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_default"
        android:layout_marginEnd="@dimen/spacing_default"
        android:text="@string/status"
        app:layout_constraintEnd_toStartOf="@id/axis_y"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_connection" />

    <TextView
        android:id="@+id/output_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_default"
        android:layout_marginTop="@dimen/spacing_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/axis_y"
        app:layout_constraintTop_toBottomOf="@id/output_connection"
        android:text="@string/unactive" />

    <TextView
        android:id="@+id/label_delay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_default"
        android:text="@string/delay"
        app:layout_constraintEnd_toStartOf="@id/axis_y"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_status" />

    <TextView
        android:id="@+id/output_delay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_default"
        android:layout_marginTop="@dimen/spacing_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/axis_y"
        app:layout_constraintTop_toBottomOf="@id/output_status"
        android:text="0"
        tools:text="24ms" />

    <ImageView
        android:id="@+id/btn_tumbler"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_tumbler"
        android:tint="@color/highlight_inactive"
        app:layout_constraintBottom_toTopOf="@id/btn_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_delay" />

    <Button
        android:id="@+id/btn_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:text="@string/history"
        android:textColor="@color/absolutely_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>